...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:padding="8dp" />
        </LinearLayout>

...
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Add Location Button -->
        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a Location"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />
...
