...
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:gravity="center"
        android:textStyle="bold"
...
